--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Core learning path utilities for Project Sapiens",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "tsc -p tsconfig.json",
     "test": "vitest run"
   },
   "keywords": [
@@ -19,20 +17,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "vitest": "^1.5.0"
-  },
-  "dependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
-    "@vitejs/plugin-react": "^5.1.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.16",
-    "vite": "^7.1.12"
   }
 }
